--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</div>
 	<div class="importance">
 	<h2>Why to Donate Blood </h2>
-	<p>A blood donation is truly an altruistic gift that an individual can give to others in need. In only 45-60 minutes, an eligible individual can donate one unit of blood that can be separated into four individual components that could help save multiple lives.
+	<p>A blo donation is truly an altruistic gift that an individual can give to others in need. In only 45-60 minutes, an eligible individual can donate one unit of blood that can be separated into four individual components that could help save multiple lives.
 		From one unit of blood, red blood cells can be extracted and used to treat patients who lost blood due to trauma or those who are recovering from surgery. Plasma, the liquid part of blood, is typically administered to patients with requiring treatment to improve blood clotting. Platelets, a third component, clot the blood when cuts or other open wounds occur, and are often used in the treatment of patients with cancer or those undergoing organ transplants. Finally, cryoprecipitated anti-hemophilic factor (AHF) is also used for clotting factors.
 		<a href="https://www.aabb.org/for-donors-patients/why-donate-blood" target="_blank"
 		style="color:blue;text-decoration:underline; font-size:15px">
